# oop-to-dop

./: LICENSE.md  README.md  go.mod  main.go  main_test.go  question.go  survey.go  survey_instance.go
benchmarks/: bench.txt  go_bench.txt
dod/: authors.go  helpers.go  post_test.go  posts.go  questions.go  survey_instances.go  survey_test.go  surveys.go
go/: go.mod  main.go
go/dod/: posts_test.go
go/dop/: authors.go  helpers.go  posts.go  posts_test.go
go/oop/: helpers.go  post.go  post_test.go
oop/: author.go  helpers.go  post.go  post_test.go  question.go  survey.go  survey_instance.go  survey_test.go
rust/: Cargo.toml
rust/benches/: dop_post_benchmarks.rs  oop_post_benchmarks.rs
rust/src/: lib.rs  main.rs
rust/src/dop/: authors.rs  mod.rs  posts.rs
rust/src/oop/: author.rs  mod.rs  post.rs
rust/src/util/: dop.rs  mod.rs  oop.rs
