[package]
name = "rust_oop_to_dop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
rand = "0.8.5"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "oop_post_benchmarks"
harness = false

[[bench]]
name = "dop_post_benchmarks"
harness = false